# fup

./: .gitignore  Dockerfile  docker-compose.yml  init.sh  main.py  pyproject.toml
lib/: store.py
templates/: copy.html  upload.html
